--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,26 +41,25 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.jakewharton:butterknife:8.0.1'
     compile 'com.google.dagger:dagger:2.2'
+    compile 'com.android.support:support-v4:23.4.0'
 
     // test only dependencies
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
-    androidTestCompile ('com.android.support.test:runner:0.4.1') {
+    androidTestCompile('com.android.support.test:runner:0.4.1') {
         exclude module: 'support-annotations'
     }
-    androidTestCompile ('com.android.support.test:rules:0.4.1') {
+    androidTestCompile('com.android.support.test:rules:0.4.1') {
         exclude module: 'support-annotations'
     }
-    androidTestCompile ('org.hamcrest:hamcrest-library:1.3') {
+    androidTestCompile('org.hamcrest:hamcrest-library:1.3') {
         exclude module: 'support-annotations'
     }
-    androidTestCompile ('com.android.support.test.espresso:espresso-core:2.2.1') {
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.1') {
         exclude module: 'support-annotations'
     }
-    androidTestCompile ('com.android.support.test.espresso:espresso-contrib:2.2.1') {
+    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.1') {
         exclude module: 'support-annotations'
+        exclude module: 'support-v4'
     }
-//    androidTestCompile ('com.android.support.test.uiautomator:uiautomator-v18:2.1.1') {
-//        exclude module: 'support-annotations'
-//    }
 }
