--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.0"
 
     defaultConfig {
         applicationId "com.indigo.tag"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -32,38 +32,34 @@ android {
 }
 
 dependencies {
-    // app only dependencies
     compile fileTree(dir: 'libs', include: ['*.jar'])
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
     apt 'com.google.dagger:dagger-compiler:2.2'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.mcxiaoke.volley:library:1.0.19'
-    compile 'me.tatarka:gradle-retrolambda:3.3.0-beta4'
+    apt 'org.projectlombok:lombok:1.12.6'
+    provided 'javax.annotation:jsr250-api:1.0'
+    provided 'org.projectlombok:lombok:1.12.6'
+    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.android.support:design:24.0.0'
+    compile 'com.android.support:support-v4:24.0.0'
+    compile 'com.android.support:cardview-v7:24.0.0'
+    compile 'com.android.support:recyclerview-v7:24.0.0'
+    compile 'com.google.firebase:firebase-core:9.2.0'
+    compile 'com.google.firebase:firebase-crash:9.2.0'
+    compile 'com.google.firebase:firebase-auth:9.2.0'
+    compile 'com.google.firebase:firebase-database:9.2.0'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.1.7'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.google.code.gson:gson:2.6.2'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.jakewharton:butterknife:8.0.1'
+    compile 'com.squareup.okhttp3:okhttp:3.3.1'
     compile 'com.google.dagger:dagger:2.2'
-    compile 'com.android.support:support-v4:23.4.0'
-
-    // test only dependencies
+    compile 'com.jakewharton:butterknife:8.0.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'me.tatarka:gradle-retrolambda:3.3.0-beta4'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
-    androidTestCompile('com.android.support.test:runner:0.4.1') {
-        exclude module: 'support-annotations'
-    }
-    androidTestCompile('com.android.support.test:rules:0.4.1') {
-        exclude module: 'support-annotations'
-    }
-    androidTestCompile('org.hamcrest:hamcrest-library:1.3') {
-        exclude module: 'support-annotations'
-    }
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.1') {
-        exclude module: 'support-annotations'
-    }
-    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.1') {
-        exclude module: 'support-annotations'
-        exclude module: 'support-v4'
-    }
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
